<resources>
    <string name="app_name">WNews</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_news_detail">NewsDetailActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_bar_search">Search</string>
    <string name="search_hint">Search for news</string>
    <string name="search_lable">Search for news</string>
    <string name="search_settings_description">Search for news</string>
    <string name="title_activity_user_login">UserLoginActivity</string>
    <string name="user_login_header">To save articles and take advatage of other features, log in.</string>
    <string name="user_login_submit_button">Log In</string>
    <string name="action_user_login">Login</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="header1summary">header1summary</string>
    <string name="header1title">header1title</string>
    <string name="pref_summary_notification">On or Off for notifications</string>
    <string name="pref_title_notification">Notifications</string>
    <string name="pref_title_user_email">Email address</string>
    <string name="pref_default_user_email" />
    <string name="pref_title_category_notification">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="action_user_logout">Logout</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_activity_base">BaseActivity</string>
</resources>
