<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<EditTextPreference
		android:key="general_user_email"
		android:title="@string/pref_title_user_email"
		android:defaultValue="@string/pref_default_user_email"
		android:selectAllOnFocus="true"
		android:inputType="textEmailAddress"
		android:singleLine="true"
		android:maxLines="1" />

	<PreferenceCategory android:title="@string/pref_title_category_notification">

	<CheckBoxPreference
		android:key="notifications_new_message"
		android:title="@string/pref_title_new_message_notifications"
		android:defaultValue="true" />

	<RingtonePreference
		android:dependency="notifications_new_message"
		android:key="notifications_new_message_ringtone"
		android:title="@string/pref_title_ringtone"
		android:ringtoneType="notification"
		android:defaultValue="content://settings/system/notification_sound" />

	<!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
	<CheckBoxPreference
		android:dependency="notifications_new_message"
		android:key="notifications_new_message_vibrate"
		android:title="@string/pref_title_vibrate"
		android:defaultValue="true" />
	</PreferenceCategory>

</PreferenceScreen>